--- a/AulaBDD/AulaBDD.csproj
+++ b/AulaBDD/AulaBDD.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98FDCDE8-611C-4689-850A-B0D9FC38FC74}</ProjectGuid>
+    <ProjectGuid>{A61EE3FC-3C50-4C56-B623-614BA26F19C1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>AulaBDD</RootNamespace>
     <AssemblyName>AulaBDD</AssemblyName>
@@ -57,12 +57,9 @@
   <ItemGroup>
     <None Include="Test.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Test.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
-    <None Include="Converter.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>Converter.feature.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Test.feature.cs">
@@ -70,10 +67,6 @@
     </Compile>
     <Compile Include="TestSteps.cs" />
     <Compile Include="Calculator.cs" />
-    <Compile Include="Converter.feature.cs">
-      <DependentUpon>Converter.feature</DependentUpon>
-    </Compile>
-    <Compile Include="ConverterSteps.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SpecFlow.NUnit.3.0.191\build\SpecFlow.NUnit.targets" Condition="Exists('..\packages\SpecFlow.NUnit.3.0.191\build\SpecFlow.NUnit.targets')" />
